--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     background-image: url(iksz.jpg);
 }
 .mezoO{
-    background-image: url(iksz.jpg);
+    background-image: url(kor.jpg);
 }
 article{
     text-align: center;
